--- a/src/styles/pages/WorkPage.scss
+++ b/src/styles/pages/WorkPage.scss
@@ -15,7 +15,7 @@
   }
   
   .projects-section {
-    padding-bottom: $spacing-3xl;
+    // padding-bottom: $spacing-3xl;
   }
   
   .projects-grid {
