--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -44,7 +44,7 @@ $breakpoint-2xl: 1536px;
 
 // Layout
 $container-padding: $spacing-md;
-$header-height: 80px;
+$header-height: 120px;
 $footer-height: 200px;
 $max-width: 1280px;
 
